--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>课堂工具</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;" />
-<link rel="stylesheet" href="files/sjdm.css" /> 
-<script type="text/javascript" src="files/data.js" ></script>
-<script type="text/javascript" src="files/sjdm.js" ></script>
+<link rel="stylesheet" href="sjdm.css" /> 
+<script type="text/javascript" src="data.js" ></script>
+<script type="text/javascript" src="sjdm.js" ></script>
 </head>
 <body onLoad="init()" >
 <div id="tab_content" >
