--- a/sjdm.html
+++ b/sjdm.html
@@ -29,7 +29,7 @@ body {
   <tr>
     <td width="20%" ><div id="bj" align="center" > </div></td>
     <td width="20%" onclick="xskb()" ><div align="center" >课程表 </div></td>    
-    <td width="20%" onclick="javascript:location.href='sjdma.html' " ><div align="center" >A </div></td>    
+    <td width="20%" onclick="initdata();init() " ><div align="center" >初始化 </div></td>    
     <td><div id="mtime" onclick="resettime()" align="center">时间</div></td>
   </tr>
 </table>
